kube/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-to-sms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phone-to-sms
      app: phone-to-sms
  template:
    spec:
      containers:
      - name: phone-to-sms
        image: phone-to-sms@sha256:something
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
