kube/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-to-sms
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: phone-to-sms
    app: phone-to-sms
  ports:
    - port: 80
      targetPort: 8080
